k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hivebox-service
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 5000
  selector:
    app: hivebox
